# novels-code

./: .env.example  .gitignore  LICENSE  README.md  README_EN.md  install.bat  pyproject.toml  requirements.txt  run-gui.bat  system_prompt.md  使用指南.txt
app/: main.py
app/routers/: items.py
desktop/: app.py  run.bat  run.ps1
mcp/: loop_mcp_patch.py  mcp_client.py  mcp_servers.json  test_mcp_integration.py
src/gangge/: __init__.py  cli.py  cli_repl.py  pricing.py
src/gangge/dramatica/: __init__.py  pipeline.py  server.py  setup.py
src/gangge/dramatica/agents/: __init__.py
src/gangge/dramatica/llm/: __init__.py
src/gangge/dramatica/narrative/: __init__.py
src/gangge/dramatica/narrative_graph/: __init__.py  consistency.py  indexer.py  queries.py  schema.py  traversal.py
src/gangge/dramatica/state/: __init__.py
src/gangge/dramatica/templates/: characters.json  events.json  world.json
src/gangge/dramatica/types/: __init__.py  narrative.py  state.py
src/gangge/dramatica/validators/: __init__.py
src/gangge/i18n/: __init__.py  en.json  zh.json
src/gangge/layer1_ui/: __init__.py  terminal.py
src/gangge/layer2_session/: __init__.py  context.py  manager.py  state.py  storage.py
src/gangge/layer3_agent/: loop.py  pipeline.py  planner.py  progress_emitter.py
src/gangge/layer3_agent/prompts/: system.py
src/gangge/layer3_agent/tools/: ask_user.py  (+20 more)
src/gangge/layer4_permission/: __init__.py  danger.py  guard.py  rules.py
src/gangge/layer4_tools/: plugin_loader.py  repo_index.py  shadow_git.py
src/gangge/layer5_llm/: __init__.py  anthropic.py  base.py  openai_compat.py  registry.py
tests/: test_architecture.py  test_core.py  test_items.py  test_mcp_integration.py
