[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gangge-code"
version = "0.1.0"
description = "AI Coding Assistant — 5-Layer Architecture"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ydsgangge-ux" },
]
keywords = ["ai", "coding-assistant", "agent", "llm", "deepseek", "claude", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "textual>=0.80.0",
    "rich>=13.9.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.10.0",
    "watchdog>=5.0.0",
    "pyperclip>=1.9.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.6.0",
]
web = [
    "playwright>=1.45.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7.0",
]
all = [
    "gangge-code[gui,web,dev]",
]

[project.scripts]
gangge = "gangge.cli:main"

[project.urls]
Homepage = "https://github.com/ydsgangge-ux/gangge-code"
Repository = "https://github.com/ydsgangge-ux/gangge-code"
Issues = "https://github.com/ydsgangge-ux/gangge-code/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
